# venestock

./: AGENTS.md  README.md  content_marketing.md  guion.txt  report.md
frontend/: .env.example  .gitignore  README.md  build_admin.bat  error.txt  generate_licence.py  package-lock.json  package.json  requirements.txt  venestock.py  venestock.spec  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src-tauri/: Cargo.toml  schema.sql  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: db.rs  lib.rs  main.rs  models.rs  scraper.rs
frontend/src/components/: ConfirmModal.tsx  LicenseGuard.tsx  SearchableSelect.tsx  Sidebar.tsx  TasaConfirmModal.tsx  TasaWidget.tsx
frontend/src/lib/: appwrite.ts  utils.ts
frontend/src/types/: index.ts
frontend/src/views/: AboutView.tsx  CategoriesView.tsx  DashboardView.tsx  DatabaseView.tsx  FacturasView.tsx  InventoryView.tsx  LabelModal.tsx  MovementsView.tsx  POSView.tsx  PaymentModal.tsx  ProductDetailsModal.tsx  ProductModal.tsx  RecalculateModal.tsx
