[package]
name = "venestock"
version = "0.1.0"
description = "VenoStock es una aplicación de escritorio diseñada para el control administrativo de inventarios en entornos con múltiples divisas (USD/VES)"
authors = ["Nelson Portillo"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "venestock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.22"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22.1"
libsql = { version = "0.9.29", features = ["replication", "remote"] }
# Eliminamos sqlx para evitar conflictos de símbolos de SQLite

